--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,23 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+
+  firebase_core: ^1.12.0
+  cloud_firestore: ^3.1.7
+  firebase_storage: ^10.1.0
+
+
+  mobx: ^2.0.5
+  flutter_mobx: ^2.0.2
+  mobx_codegen: ^2.0.2
+  json_annotation: ^4.1.0
+  get_it: ^7.2.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.1.7
+  json_serializable: ^4.1.4
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
