--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   mobx_codegen: ^2.0.2
   json_annotation: ^4.1.0
   get_it: ^7.2.0
+  google_fonts: ^2.3.0
 
 dev_dependencies:
   flutter_test:
